# miker

./: Cargo.toml  DEFAULT_OVMF_VARS.fd  Makefile.toml  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.vim/: coc-settings.json
init/: Cargo.toml  Makefile.toml
init/.cargo/: config.toml
init/src/: main.rs
kernel/: Cargo.toml  Makefile.toml  build.rs  link.ld
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  driver.rs  interrupt.rs  lib.rs  logger.rs  main.rs  memmap.rs  paging.rs  screen.rs  sync.rs  syscall.rs  task.rs  timer.rs
kernel/src/driver/: ahci.rs
loader/: Cargo.toml  Makefile.toml
loader/src/: main.rs
loader2/: Cargo.toml  Makefile.toml
loader2/src/: main.rs
macros/: Cargo.toml  Makefile.toml
macros/src/: lib.rs
util/: Cargo.toml
util/src/: acpi.rs  apic.rs  asmfunc.rs  bitfield.rs  boot.rs  buffer.rs  collections.rs  descriptor.rs  driver.rs  elf.rs  error.rs  font_data.rs  graphics.rs  hash.rs  interrupt.rs  lib.rs  loader.rs  paging.rs  pci.rs  screen.rs  sync.rs
util/src/acpi/: apic.rs
util/tests/: buffer.rs  collections.rs  sync.rs
