[workspace]
resolver = "2"
members = ["loader", "loader2"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["kei519 <masaki.keigo.q00@kyoto-u.jp>"]
description = "A MICro KERnel OS for me to study."
readme = "README.md"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = false
panic = "abort"

[profile.release]
strip = "symbols"
panic = "abort"
