[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
log = "0.4.32"
paste = "*"
uefi = "*"
util = { path = "../util", features = ["alloc"] }
